# credit_scoring

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
api/: database.py  main.py
models/: credit_scoring_model.onnx  feature_names.json  imputer_medians.npy  threshold.json
models/credit_scoring_model/: MLmodel  conda.yaml  model.pkl
monitoring/: dashboard.py  reference_sample.parquet
notebooks/: 01_eda.ipynb  02_preparation.ipynb  03_modeling.ipynb  04_optimization.ipynb  05_monitoring.ipynb  06_optimization.ipynb
scripts/: convert_to_onnx.py  simulate_traffic.py
tests/: sample_clients.json  test_api.py
